# icml26-repro-UTiEfkfNQ2-anpm

./: .gitignore  README.md  STATUS.md  pyproject.toml
.trackio/: metadata.json
.trackio/logbook/: README.md  index.html  logbook.json
.trackio/logbook/pages/: index.md
logbook/: logbook.json
logbook/data/: claim1_noise_boundary.json  claim3_adepm.json  claim5_deepca.json
logbook/pages/: index.md
logbook/pages/claim-1-accelerated-rate-under-perturbation/: page.md
logbook/pages/claim-1-noise-boundary/: page.md
logbook/pages/claim-2-counterexamples/: page.md
logbook/pages/claim-2-decentralized-pca/: page.md
logbook/pages/claim-3-adepm/: page.md
logbook/pages/claim-3-worst-case-optimal-boundary/: page.md
outputs/: amazon_rank30_provenance.json  claim2_counterexamples.json  claim4_gossip_mixing.json  depca_demo.json  depca_ego_facebook_repro.csv  facebook_depca_full_provenance.json  facebook_experiment.json  verify_summary.json
reports/anpm-repro/: report.md
repro/: run.sh
repro/anpm/: VENDORED_UPSTREAM_SHA  anpm.py  depca.py  gossip.py  metrics.py
repro/notebooks/: anpm_walkthrough.py
repro/results_reference/: anpm_synthetic_beta_largegap.csv  anpm_synthetic_noise_.csv  depca_ego_facebook_.csv
repro/src/: amazon_provenance.py  claim1_noise_boundary.py  claim2_counterexamples.py  claim3_adepm.py  claim4_gossip_mixing.py  claim5_deepca.py  common.py  depca_demo.py  facebook_depca_evidence.py  facebook_experiment.py  make_figures.py  plot_amazon_full.py  run_all.py  run_amazon_full.sh  verify.py
repro/tests/: test_anpm.py  test_claims.py
(+26 files in other folders)
